package app.carport.Controllers;

import app.carport.Persistence.ConnectionPool;
import io.javalin.Javalin;

public class HeaderController {
    public static void addRoutes(Javalin app, ConnectionPool connectionPool) {

    }

    public static void gotoShop(ConnectionPool connectionPool) {
    }

    public static void gotoCreateUser(ConnectionPool connectionPool) {
    }

    public static void gotoLogin(ConnectionPool connectionPool) {
    }

    public static void gotoOrder(ConnectionPool connectionPool) {
    }
}
