package app.cupcake.Controllers;


import app.cupcake.Persistence.ConnectionPool;
import io.javalin.Javalin;

public class AdminController {
    public static void addRoutes(Javalin app, ConnectionPool connectionPool) {}

}


